## $Id: Makefile.am,v 3.0 2002/11/21 01:27:51 breholee Exp $
## ---------------------------------------------------------------------------

MAINTAINERCLEANFILES = Makefile.in

lib_LTLIBRARIES = libpdebug.la

include_HEADERS = PrettyDebug.hh PrettyDebugS.hh

libpdebug_la_SOURCES = PrettyDebug.cc PrettyDebugS.cc

libpdebug_la_LDFLAGS = -version-info 0:0:0

