## $Id: Makefile.am,v 3.1 2003/03/21 18:17:24 breholee Exp $
## ---------------------------------------------------------------------------

MAINTAINERCLEANFILES = Makefile.in

lib_LTLIBRARIES = libpdebug.la

include_HEADERS = PrettyDebug.hh DebugOStream.hh

libpdebug_la_SOURCES = PrettyDebug.cc

libpdebug_la_LDFLAGS = -version-info 1:0:1
