## CERTI scripts/Makefile.am
## Copyright (C) 2001, 2003 ONERA
## $Id: Makefile.am,v 1.1 2003/10/20 11:25:44 breholee Exp $
##
## Process this file with automake to produce Makefile.in

## @configure_input@

bin_SCRIPTS = certi-start certi-stop

## EOF $Id: Makefile.am,v 1.1 2003/10/20 11:25:44 breholee Exp $
