## $Id: Makefile.am,v 3.0 2002/11/21 01:27:51 breholee Exp $ 
## ---------------------------------------------------------------------------

# @configure_input@

MAINTAINERCLEANFILES = Makefile.in

INCLUDES = -I$(top_srcdir)/test/include @XCFLAGS@ @WITH_X11@

lib_LIBRARIES = libgraph.a
libgraph_a_SOURCES = graph_c.cc

LDADD = @XLIBS@

## EOF $Id: Makefile.am,v 3.0 2002/11/21 01:27:51 breholee Exp $
