## $Id: Makefile.am,v 3.1 2005/04/30 14:46:54 breholee Exp $ 

MAINTAINERCLEANFILES = Makefile.in

INCLUDES = @XCFLAGS@ @WITH_X11@

noinst_HEADERS = graph_c.hh

lib_LIBRARIES = libgraph.a

libgraph_a_SOURCES = graph_c.cc

LDADD = @XLIBS@

## EOF $Id: Makefile.am,v 3.1 2005/04/30 14:46:54 breholee Exp $
