## $Id: Makefile.am,v 3.2 2007/05/04 08:41:23 erk Exp $ 

MAINTAINERCLEANFILES = Makefile.in

INCLUDES = @XCFLAGS@ @WITH_X11@

noinst_HEADERS = graph_c.hh

lib_LIBRARIES = libgraph.a

libgraph_a_SOURCES = graph_c.cc

LDADD = @XLIBS@

EXTRA_DIST = CMakeLists.txt

## EOF $Id: Makefile.am,v 3.2 2007/05/04 08:41:23 erk Exp $
